@@ -12,13 +12,10 @@ DIST linux-2.6.32.tar.bz2 64424138 RMD160 b93742cbaf8174f2200d2dbef0d47a26c61803
 DIST linux-2.6.34.tar.bz2 67633622 RMD160 dafd721b00c13e3652405b517b379eed10020bf4 SHA1 4188857ba71f301991dc56285f593e9c311e5824 SHA256 fa395fec7de633df1cb85b6248b8f35af98380ed128a8bc465fb48bc4d252633
 DIST linux-2.6.35.tar.bz2 69305709 RMD160 f5d91abb4fa72fac812578d830b22180d85a0e6f SHA1 4cb1fbfbeedcd658ca37739679c65dfaa136bf4e SHA256 18b2e2c336032e366c942622b77302cb05fc034fb19018f086a4ebc9ed41bfcf
 DIST patch-2.6.32.22.bz2 602391 RMD160 1f3b8cbac32a5833d98e89e0f2e7a4cd24fe4996 SHA1 bc2239222fc61e45404bb9db41e9e6e51594a6a1 SHA256 9f04a819a6ae1ac9a4793ce229bc9a2cb095ac10a2d46955ec1e6769283c4de4
-DIST patch-2.6.34.6.bz2 185209 RMD160 75c9a569f8c80be7c418b75f7cde444fcc0a70ff SHA1 e033e2bc4b46e7cc8ee19c07b5ad6999b4c2a52d SHA256 a62e9392ad435948ea4ea2cce12e60e042da6e6da806691936ba50bbaa0dc8cc
 DIST patch-2.6.34.7.bz2 184957 RMD160 0f72e9496ff0082df05424ec75aff166ba6dff27 SHA1 b346d804a428239145b6c058ff0df88792c31094 SHA256 b146904ea07cc87a3fbcbd4eab51d331d56718431539e6aa29c24b072e6b7832
 DIST patch-2.6.35.5.bz2 115391 RMD160 8a6d0b71aa043531575203aa61ac6807532f35e8 SHA1 1267c980179fe4ab35ac7344523c4dd616d2d5a6 SHA256 94bbeb43c6bd8047fa5f42766a68879199dfdadee11bd3e8f10f1317f698b0f4
-EBUILD calculate-sources-2.6.32.22-r1.ebuild 748 RMD160 b896fde446060469ef43da0ca52a7654df6b9536 SHA1 906107a1c742698f796e030415ab07988dc3209b SHA256 a7dbbc43e6ca706102c2a66495f4593ee64d69823264a2dca6c19d87291a116c
-EBUILD calculate-sources-2.6.32.22.ebuild 746 RMD160 e7683435e0f449453c016be2e3888ebb81372cb1 SHA1 19a3aa25464ed50bdeaeed66bd924a1e745746c8 SHA256 96f403498be3196cff45c515b37db834095bd1166916e2889a75d9e492c9cdf3
-EBUILD calculate-sources-2.6.34.6.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
-EBUILD calculate-sources-2.6.34.7.ebuild 732 RMD160 4eb92daf4c535ce529c8930847f4503bd4431617 SHA1 5aeeff74e73d173257844c4a3ebfea11fc87f69d SHA256 b584166d290c6738947dee840e678ea00821d33892402643dffa8a7f88610880
+EBUILD calculate-sources-2.6.32.22-r1.ebuild 746 RMD160 e7683435e0f449453c016be2e3888ebb81372cb1 SHA1 19a3aa25464ed50bdeaeed66bd924a1e745746c8 SHA256 96f403498be3196cff45c515b37db834095bd1166916e2889a75d9e492c9cdf3
+EBUILD calculate-sources-2.6.34.7.ebuild 730 RMD160 03829000741607b551f63823a12df566bae495d6 SHA1 65c76f8c936acda61f12991e3756db6a4f3f4142 SHA256 0e0593a099c5d3d5f087e1fd5f55eb94a7d49ee6d1e4c55e5b5e23f19b0ddd71
 EBUILD calculate-sources-2.6.35.5.ebuild 732 RMD160 4eb92daf4c535ce529c8930847f4503bd4431617 SHA1 5aeeff74e73d173257844c4a3ebfea11fc87f69d SHA256 b584166d290c6738947dee840e678ea00821d33892402643dffa8a7f88610880
-MISC ChangeLog 3200 RMD160 7c03938dde601a2d012b20f41ffbb45a83f9d932 SHA1 d726a15f48a73bb0e1e413d4692b7975add225d9 SHA256 581216caac92ef51fd4e6ce359ca529f9b4781a76d90d367facd051c2c99d0b9
+MISC ChangeLog 3441 RMD160 f46314ed8b5d350c5c682613ba806167af2ed575 SHA1 1609711a909cb9a2ed2a44ff3dcb00f54d12fb88 SHA256 cccfb5111006e73087ca19bd0cdeb3a266a94a16d11736313bc0f60152ab5a88
 MISC metadata.xml 364 RMD160 308abbf758102b5591c353f41a62be6836f98693 SHA1 5029bd7cf897e4eb8f8e8fa935c02d4c73eb59db SHA256 0bee25282d797e432206373a8535689412a3f76f8974315f8ecf73536bf0e505
