@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -calculate-sources-2.6.32.22.ebuild,
+  calculate-sources-2.6.32.22-r1.ebuild, -calculate-sources-2.6.34.6.ebuild,
+  calculate-sources-2.6.34.7.ebuild:
+  removed old version
+
 *calculate-sources-2.6.35.5 (22 Sep 2010)
 
   22 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
